# PROJECT-SUM-UP

./: README.md
UNIVERSAL/: CMakeLists.txt  filemanage.cpp  filemanage.h  main.cpp  making.cpp  making.h
UNIVERSAL/kk/: CMakeLists.txt  main.cpp
image_processing/: CMakeLists.txt  img_processing.cpp  img_processing.h  justrandom.cpp  justrandom.h  main.cpp  t  t.cpp
image_processing/picture/: cac70948-7eb7-446e-aae9-798b905f2088.avif  jjj.ppm  llm.ppm  output.ppm
prison_d/: keymap.md  t  test  test.cpp  test.txt  text_editor.cpp  text_editor.hpp
real_calculator_just_command/: CMakeLists.txt  fraction_mode.cpp  fraction_mode.hpp  main.cpp  test.cpp
texteditor/: CMakeLists.txt  main.cpp
wordle/: CMakeLists.txt  backup  concept.md  main.cpp  new  new.cpp
